--- a/app/src/main/res/layout/activity_login_or_signup.xml
+++ b/app/src/main/res/layout/activity_login_or_signup.xml
@@ -1,165 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/whiteColor"
     tools:context=".loginOrSignup">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/signInGoogleNewwSIB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/signInFacebookNewwLB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
 
-    <LinearLayout
-        android:id="@+id/loginOrSignupHeadingLL"
-        android:orientation="horizontal"
+    <ImageView
+        android:id="@+id/StayatHomeImage"
+       android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/login_layout"
+        android:scaleType="fitXY"/>
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp">
-        <TextView
-            android:id="@+id/loginTV"
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/StayatHomeImage">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signInGoogleNewwSIB"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:background="@color/colorActionBarBackground"
-            android:textColor="@color/colorActionBarTitleText"
-            android:textStyle="normal"
-            android:textSize="18dp"
-            android:text="LOG IN"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.1"
+            android:visibility="gone"/>
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/signInFacebookNewwLB"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="|"/>
-        <TextView
-            android:id="@+id/signupTV"
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/colorProductBrand"
-            android:textSize="14dp"
-            android:text="SIGN UP"/>
-    </LinearLayout>
+            android:visibility="gone"/>
 
-    <LinearLayout
-        android:id="@+id/continueWithGoogleLL"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/loginOrSignupHeadingLL"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:background="@drawable/border_store_page">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="0.1"
-            android:layout_height="match_parent"
-            android:src="@drawable/google_icon_round"
-            android:paddingLeft="5dp" />
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.9"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textColor="@color/colorBodyText"
-            android:text="Continue with Google" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/continueWithFacebookLL"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/continueWithGoogleLL"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp"
-        android:background="@drawable/border_store_page">
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="0.1"
-            android:layout_height="match_parent"
-            android:src="@drawable/facebook_icon_round"
-            android:paddingLeft="5dp"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.9"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textColor="@color/colorBodyText"
-            android:text="Continue with Facebook" />
-    </LinearLayout>
-    
-    <TextView
-        android:id="@+id/orNewwTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/continueWithFacebookLL"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/top_bottom_border"
-        android:textColor="@color/colorBodyText"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="OR"/>
-
-    <LinearLayout
-        android:id="@+id/phoneLoginNewwLL"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/orNewwTV"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.18"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginRight="25dp">
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
+            android:id="@+id/loginOrSignupHeadingLL"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/phoneNoNewwET"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="31dp">
+
+            <TextView
+                android:id="@+id/loginTV"
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:background="@drawable/gradient_button"
+                android:fontFamily="@font/comfortaa_bold"
+                android:gravity="center"
+                android:text="LOG IN"
+                android:textAlignment="center"
+                android:textColor="@color/whiteColor"
+                android:textSize="15dp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:gravity="center"
+                android:text="|"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/signupTV"
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:gravity="center"
+                android:text="SIGN UP"
+                android:textAlignment="center"
+                android:textColor="@color/blackColor"
+                android:textSize="14dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/phoneLoginNewwLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/loginOrSignupHeadingLL"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.18"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp">
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Enter 10 digit phone no" />
-        </android.support.design.widget.TextInputLayout>
-        <Button
-            android:id="@+id/phoneLoginNewwB"
+                app:hintTextAppearance="@style/MyHintStyle"
+                >
+
+                <EditText
+                    android:id="@+id/phoneNoNewwET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:drawableLeft="@drawable/phone_call"
+                    android:drawablePadding="5dp"
+                    android:hint="Enter 10 digit phone no"
+                    android:background="@drawable/bottom_border"
+                    android:padding="10dp"
+                    android:textCursorDrawable="@null"
+                   />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/phoneLoginNewwB"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/whiteColor"
+                android:textAllCaps="false"
+                android:padding="5dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:background="@drawable/gradient_button"
+                android:layout_gravity="center_horizontal"
+                android:text="Send OTP" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/orNewwTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login with OTP"/>
-    </LinearLayout>
+            app:layout_constraintTop_toBottomOf="@+id/phoneLoginNewwLL"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:textColor="@color/colorBodyText"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="OR"/>
 
-</android.support.constraint.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/continueWithFacebookLL"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/orNewwTV"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/border_store_page">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="0.1"
+                android:layout_height="match_parent"
+                android:src="@drawable/facebook_image"
+                android:paddingLeft="5dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.9"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textSize="14sp"
+                android:textColor="@color/colorBodyText"
+                android:text="Continue with Facebook" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/continueWithGoogleLL"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/continueWithFacebookLL"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp"
+            android:background="@drawable/border_store_page">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="0.1"
+                android:layout_height="wrap_content"
+                android:src="@drawable/google_image"
+                android:paddingLeft="5dp" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.9"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:textColor="@color/colorBodyText"
+                android:text="Continue with Google" />
+        </LinearLayout>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</RelativeLayout>
