--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?actionBarSize"
             android:background="@drawable/appbardesign"
             android:fitsSystemWindows="true">
 
@@ -77,7 +77,7 @@
                         android:id="@+id/imgSliderVP"
                         android:layout_width="match_parent"
                         android:layout_height="150dp"
-                        android:padding="5dp"
+                        android:paddingHorizontal="5dp"
                         android:layout_marginTop="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
