--- a/app/src/main/res/layout/activity_no_internet.xml
+++ b/app/src/main/res/layout/activity_no_internet.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/whiteColor"
     tools:context="e.a.exlorista_customer.NoInternet">
 
+
+<ImageView
+    android:id="@+id/noInternetImage"
+   android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/no_internet_pic"
+    android:layout_centerHorizontal="true"
+    android:layout_centerInParent="true"/>
 
     <TextView
         android:id="@+id/noInternet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/noInternetImage"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_centerHorizontal="true"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="@color/blackColor"
+        android:fontFamily="@font/comfortaa_bold"
+        />
 
     <Button
         android:id="@+id/retryConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/noInternet"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/whiteColor"
+        android:background="@drawable/login_signup_btn"
+        android:fontFamily="@font/comfortaa_bold"
         android:text="Retry"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noInternet" />
-</android.support.constraint.ConstraintLayout>
+        />
+
+</RelativeLayout>
