--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,73 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="bottom"
-    android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:layout_height="200dp"
+    android:background="@color/colorPrimary"
+    >
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profilePic"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:elevation="6dp"
+        android:src="@drawable/userprofile"
+        app:civ_border_color="@color/whiteColor"
+        app:civ_border_width="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/navBarUserDetailsLL"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:visibility="gone">
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/navBarUserDisplayNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorBodyText"
-            android:text="Shashank Kushwaha"/>
+            android:text="Shashank Kushwaha"
+            android:fontFamily="@font/comfortaa_bold"
+            android:textColor="@color/whiteColor" />
+
         <TextView
             android:id="@+id/navBarUserEmailTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorBodyText"
-            android:text="skvit001@gmail.com"/>
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="skvit001@gmail.com"
+            android:textColor="@color/whiteColor" />
+
         <TextView
             android:id="@+id/navBarUserPhoneTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorBodyText"
-            android:text="+91-8770415342"/>
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="+91-8770415342"
+            android:textColor="@color/whiteColor" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="15dp"
-        android:visibility="visible">
+        android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/profilePic"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/navLoginB"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="wrap_content"
-            android:text="login"
-            android:visibility="visible"/>
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/login_signup_btn"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="Login"
+            android:textColor="@color/whiteColor"
+            android:textSize="12sp"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/navSignupB"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="wrap_content"
-            android:text="sign up"
-            android:visibility="visible"/>
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:background="@drawable/login_signup_btn"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="Signup"
+            android:textColor="@color/whiteColor"
+            android:textSize="12sp"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/navSignoutB"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Signout"
-            android:visibility="gone"/>
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:background="@drawable/login_signup_btn"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="Signup"
+            android:textColor="@color/whiteColor"
+            android:textSize="12sp"
+            android:visibility="gone" />
+
 
     </LinearLayout>
 
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
