--- a/app/src/main/res/layout/orderhistory.xml
+++ b/app/src/main/res/layout/orderhistory.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/allside_border"
@@ -29,6 +30,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="2dp"
         app:layout_constraintTop_toBottomOf="@+id/storeDetailsOrderHistoryLL">
         <TextView
             android:layout_width="0dp"
@@ -54,6 +56,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="2dp"
         app:layout_constraintTop_toBottomOf="@id/orderStatusOrderHistoryLL">
         <TextView
             android:id="@+id/itemsOrderHistoryTextTV"
@@ -81,6 +84,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="2dp"
         app:layout_constraintTop_toBottomOf="@+id/itemsOrderHistoryLL">
         <TextView
             android:layout_width="0dp"
@@ -101,30 +105,50 @@
             android:gravity="right"/>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/orderGrandTotalOrderHistoryLL"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="2dp"
+        android:layout_gravity="center_vertical|center_horizontal"
         app:layout_constraintTop_toBottomOf="@+id/orderDateTimeOrderHistoryLL">
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.3"
+            android:layout_width="wrap_content"
+            android:id="@+id/gTotal"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/comfortaa_bold"
             android:textColor="@color/blackColor"
+            android:gravity="left"
+
             android:layout_height="wrap_content"
             android:text="Grand total"/>
+
+
+        <ImageView
+
+            android:layout_width="20dp"
+            android:layout_height="13dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="1dp"
+            android:layout_toLeftOf="@+id/orderGrandTotalOrderHistoryTV"
+
+            android:layout_marginRight="1dp"
+            android:src="@drawable/rupee"
+            tools:ignore="RtlHardcoded" />
+
+
         <TextView
             android:id="@+id/orderGrandTotalOrderHistoryTV"
-            android:layout_width="0dp"
-            android:layout_weight="0.7"
-            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+
             android:fontFamily="@font/comfortaa_bold"
             android:textColor="@color/blackColor"
             android:layout_height="wrap_content"
-            android:gravity="right"/>
-    </LinearLayout>
+           android:layout_alignParentEnd="true"
+
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/orderActionOrderHistoryB"
