--- a/app/src/main/res/layout/storeproductcategories.xml
+++ b/app/src/main/res/layout/storeproductcategories.xml
@@ -19,6 +19,7 @@
         android:textStyle="bold"
         android:paddingHorizontal="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
