--- a/app/src/main/res/layout/storeproductsandsubcategories.xml
+++ b/app/src/main/res/layout/storeproductsandsubcategories.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -15,7 +16,8 @@
         android:paddingLeft="10dp"
         android:paddingEnd="0dp"
         android:paddingRight="0dp"
-        android:textAllCaps="true" />
+        android:textAllCaps="true"
+        tools:ignore="MissingConstraints" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/storeProductRV"
