Sajan -  i have worked on cart Ui(added rupee logo), CartProductsAdapter UI.

--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -160,6 +160,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="35dp"
-        android:text="Save address"/>
+        android:text="Save address"
+        />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
