--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -277,6 +277,7 @@
 
     </android.support.v4.widget.NestedScrollView>
 
+
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/cartSummary_CartNSV"
         android:layout_width="match_parent"
@@ -284,6 +285,8 @@
         android:clipToPadding="true"
         android:background="@color/colorPrimaryDark"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+
         android:visibility="visible">
         
         <android.support.constraint.ConstraintLayout
